--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -1,7 +1,7 @@
 p8105_hw3_WL3011
 ================
 Weiqi Liang
-2024-10-13
+2024-10-16
 
 ## Setup File
 
@@ -9,9 +9,9 @@ Weiqi Liang
 library(tidyverse)
 library(dplyr)
 library(knitr)
-library(kableExtra)
 library(ggplot2)
 library(patchwork) 
+library(ggridges)
 ```
 
 ## Problem 1
@@ -142,61 +142,9 @@ p_january = ggplot(avg_tmax_df, aes(x = year)) +
     title = "January"
     ) +
   guides(color = "none") +
-  theme_minimal()
-```
-
-    ## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
-    ## ℹ Please use `linewidth` instead.
-    ## This warning is displayed once every 8 hours.
-    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
-    ## generated.
-
-``` r
+  theme_minimal() +
   scale_color_discrete() 
-```
 
-    ## <ggproto object: Class ScaleDiscrete, Scale, gg>
-    ##     aesthetics: colour
-    ##     axis_order: function
-    ##     break_info: function
-    ##     break_positions: function
-    ##     breaks: waiver
-    ##     call: call
-    ##     clone: function
-    ##     dimension: function
-    ##     drop: TRUE
-    ##     expand: waiver
-    ##     get_breaks: function
-    ##     get_breaks_minor: function
-    ##     get_labels: function
-    ##     get_limits: function
-    ##     get_transformation: function
-    ##     guide: legend
-    ##     is_discrete: function
-    ##     is_empty: function
-    ##     labels: waiver
-    ##     limits: NULL
-    ##     make_sec_title: function
-    ##     make_title: function
-    ##     map: function
-    ##     map_df: function
-    ##     n.breaks.cache: NULL
-    ##     na.translate: TRUE
-    ##     na.value: grey50
-    ##     name: waiver
-    ##     palette: function
-    ##     palette.cache: NULL
-    ##     position: left
-    ##     range: environment
-    ##     rescale: function
-    ##     reset: function
-    ##     train: function
-    ##     train_df: function
-    ##     transform: function
-    ##     transform_df: function
-    ##     super:  <ggproto object: Class ScaleDiscrete, Scale, gg>
-
-``` r
 # Plot for July
 p_july = ggplot(avg_tmax_df, aes(x = year)) +
   geom_line(aes(y = month_7, color = id, group = id), size = .1, alpha = .7) +
@@ -214,18 +162,6 @@ p_july = ggplot(avg_tmax_df, aes(x = year)) +
 # Combine
 p_july / p_january
 ```
-
-    ## Warning: Removed 3251 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
-
-    ## Warning: Removed 3348 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
-
-    ## Warning: Removed 3261 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
-
-    ## Warning: Removed 3329 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
 
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/AMT-1.png"
@@ -285,12 +221,6 @@ p_tmin = ggplot(ny_noaa, aes(x = tmin)) +
 p_tmin + p_tmax
 ```
 
-    ## Warning: Removed 1134420 rows containing non-finite outside the scale range
-    ## (`stat_density()`).
-
-    ## Warning: Removed 1134358 rows containing non-finite outside the scale range
-    ## (`stat_density()`).
-
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/MAXMIN-1.png"
 alt="Figure 3. Density Plot of Maximum and Minimum Temperature" />
@@ -304,27 +234,31 @@ Minimum Temperature</figcaption>
     0 and less than 100 separately by year.
 
 ``` r
+library(ggridges)
+
 p2 = ny_noaa |>
   filter(snow > 0 & snow < 100) |>
-  ggplot(aes(x = snow, fill = factor(year))) +
-  geom_histogram(position = "dodge", bins = 10) +  
+  ggplot(aes(x = snow, y = year, fill = factor(year))) +
+  geom_density_ridges(scale = 1.5, rel_min_height = 0.01) +  
   labs(
     x = "Snowfall (mm)",
-    y = "Frequency",
+    y = "Year",
     fill = "Year"
   ) +
+  scale_y_continuous(
+    breaks = seq(1980, 2010, by = 5) 
+  ) + 
   theme_minimal() +
-  theme(legend.position = "none") + 
-  facet_wrap(~ year, nrow = 6, ncol = 5) 
+  theme(legend.position = "none")
 
 print(p2)
 ```
 
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/unnamed-chunk-3-1.png"
-alt="Figure 4. Distribution of Snowfall Values" />
-<figcaption aria-hidden="true">Figure 4. Distribution of Snowfall
-Values</figcaption>
+alt="Figure 4. Annual Snowfall Values Distribution" />
+<figcaption aria-hidden="true">Figure 4. Annual Snowfall Values
+Distribution</figcaption>
 </figure>
 
 ## II. Problem 2
@@ -339,13 +273,13 @@ Values</figcaption>
 
 ``` r
 accel_df = 
-  read.csv("./nhanes_accel.csv", 
+  read_csv("./nhanes_accel.csv", 
            na = c("NA", ".", "")) |>
   janitor::clean_names() |>
   drop_na() 
 
 covar_df = 
-  read.csv("./nhanes_covar.csv", 
+  read_csv("./nhanes_covar.csv", 
            na = c("NA", ".", ""), skip = 4) |>
   janitor::clean_names() |>
   drop_na() |>
@@ -370,9 +304,7 @@ nhanes_df =
   filter(age >= 21)
 ```
 
-### 2.2 Create Visualization
-
-#### 2.2.1 Table for Participants’ Number
+### 2.2 Table for Participants’ Number
 
 The reader-friendly table for the number of men and women in each
 education category is as follows:
@@ -398,8 +330,6 @@ num_sex_df =
     )
   )
 
-
-
 kable(num_sex_df, 
       col.names = c("Gender", "Education", "Number"),
       caption = "Table 1. Number of Men and Women by Education Category")
@@ -415,6 +345,8 @@ kable(num_sex_df,
 | female | More_than_high_school  |     59 |
 
 Table 1. Number of Men and Women by Education Category
+
+### 2.3 Age Distribution
 
 The plot consists of three facets representing the three education
 categories. Each facet shows the age distribution for men and women
@@ -481,6 +413,8 @@ participants showed significant age differences, with younger males and
 older females significantly outnumbering those of the opposite sex at
 the same age.
 
+### 2.4 Total Activity
+
 Create a scatter plot with a smooth trend line meeting the following
 needs:
 
@@ -497,7 +431,6 @@ total_activity_df =
     .groups = "drop"
     )
 
-#plot
 activity_plot = ggplot(total_activity_df, aes(x = age, y = total_activity, color = gender)) +
   geom_point(alpha = 0.5) +  
   geom_smooth(method = "loess", se = FALSE) +  
@@ -517,14 +450,6 @@ activity_plot = ggplot(total_activity_df, aes(x = age, y = total_activity, color
 
 print(activity_plot)
 ```
-
-    ## `geom_smooth()` using formula = 'y ~ x'
-
-    ## Warning: Removed 1 row containing non-finite outside the scale range
-    ## (`stat_smooth()`).
-
-    ## Warning: Removed 1 row containing missing values or values outside the scale range
-    ## (`geom_point()`).
 
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/total_activity-1.png"
@@ -555,7 +480,7 @@ Activity levels are lower for both men and women, especially in early
 adulthood. There is less variability, with a smoother decline across all
 ages.
 
-### 
+### 2.4 24-Hour Activity Time Courses
 
 ``` r
 summary_df = 
@@ -569,21 +494,21 @@ summary_df =
   mutate(minute = as.numeric(minute)) |>
   group_by(minute, gender, education) |>
   summarise(mean_min = mean(min_value)) 
-```
 
-    ## `summarise()` has grouped output by 'minute', 'gender'. You can override using
-    ## the `.groups` argument.
-
-``` r
 # Create the 3-panel plot
-ggplot(summary_df, aes(x = minute, y = mean_min, color = gender)) +
+ggplot(summary_df, aes(x = minute /60, y = mean_min, color = gender)) +
   geom_point(alpha = 0.1) +  
   geom_smooth(method = "loess", se = FALSE) +  
   facet_wrap(~ education, nrow = 1, labeller = as_labeller(edu_labels)) + 
   labs(
-    x = "Minutes",
+    x = "Hour of the Day",
     y = "Mean Activity Level",
      color = "gender"
+  ) +
+  scale_x_continuous(
+    breaks = seq(0, 24, by = 4),  
+    labels = seq(0, 24, by = 4), 
+    limits = c(0, 24)  
   ) +
   theme_minimal() +
   theme(
@@ -592,13 +517,18 @@ ggplot(summary_df, aes(x = minute, y = mean_min, color = gender)) +
   )
 ```
 
-    ## `geom_smooth()` using formula = 'y ~ x'
-
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/total-1.png"
-alt="Figure 7. 24-Hour Activity Time Courses by Education Level and Sex" />
+alt="Figure 7. 24-Hour Activity Time Courses by Education Level and Gender" />
 <figcaption aria-hidden="true">Figure 7. 24-Hour Activity Time Courses
-by Education Level and Sex</figcaption>
+by Education Level and Gender</figcaption>
 </figure>
+
+- In all educational levels, it is clear that activity levels increase
+  in the morning, peak in the afternoon (with a a little drop in
+  between), and gradually decline in the evening.
+
+- Across all three educational categories, females tend to have slightly
+  higher activity levels during the peak hours compared to males.
 
 ## III. Problem 3
