--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -532,3 +532,54 @@ by Education Level and Gender</figcaption>
   higher activity levels during the peak hours compared to males.
 
 ## III. Problem 3
+
+``` r
+#read csv
+jan_2020 = read_csv("./citibike/Jan 2020 Citi.csv", 
+           na = c("NA", ".", "")) |>
+           janitor::clean_names() |>
+           mutate(year = 2020, month = "January")
+
+july_2020 = read_csv("./citibike/July 2020 Citi.csv", 
+           na = c("NA", ".", "")) |>
+           janitor::clean_names() |>
+           mutate(year = 2020, month = "July")
+
+jan_2024 = read_csv("./citibike/Jan 2024 Citi.csv", 
+           na = c("NA", ".", "")) |>
+           janitor::clean_names() |>
+           mutate(year = 2024, month = "January")
+
+july_2024 = read_csv("./citibike/July 2024 Citi.csv", 
+           na = c("NA", ".", "")) |>
+           janitor::clean_names() |>
+           mutate(year = 2024, month = "July")
+
+citibike_df = bind_rows(jan_2020, july_2020, jan_2024, july_2024) |>
+  relocate(year, month)
+```
+
+``` r
+ride_counts = citibike_df |>
+  group_by(year, month, member_casual) |>
+  summarise(total_rides = n(), .groups = 'drop')
+
+ride_counts_wide = ride_counts |>
+  pivot_wider(
+    names_from = member_casual, 
+    values_from = total_rides, 
+    )
+
+kable(ride_counts_wide, 
+      col.names = c("Year", "Month", "Causal","Member"),
+      caption = "Table 2. Total Number of Rides of Casual Riders and Citi Bike Members")
+```
+
+| Year | Month   | Causal | Member |
+|-----:|:--------|-------:|-------:|
+| 2020 | January |    984 |  11436 |
+| 2020 | July    |   5637 |  15411 |
+| 2024 | January |   2108 |  16753 |
+| 2024 | July    |  10894 |  36262 |
+
+Table 2. Total Number of Rides of Casual Riders and Citi Bike Members
