Only leave the last question

--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -533,6 +533,8 @@ by Education Level and Gender</figcaption>
 
 ## III. Problem 3
 
+Import, clean, combine and tidy these data.
+
 ``` r
 #read csv
 jan_2020 = read_csv("./citibike/Jan 2020 Citi.csv", 
@@ -559,6 +561,30 @@ citibike_df = bind_rows(jan_2020, july_2020, jan_2024, july_2024) |>
   relocate(year, month)
 ```
 
+There are 99485 rides across all four months. Every month’s file
+consists of the following 7 columns:
+
+`ride_id`: Each rides’ ID;
+
+`rideable_type`: The type of bike used, such as “classic_bike”;
+
+`weekdays`: The day of the week when the ride occurred;
+
+`duration`: The duration of the ride, in minutes;
+
+`start_station_name`: The name of the station where the ride started;
+
+`end_station_name`: The name of the station where the ride ended;
+
+`member_casual`: Whether the rider is a member or a casual user.
+
+A small number of entries have missing data in the `start_station_name`
+and `end_station_name` columns. But these observations are retained for
+the time being, as they are still valid for counting the number of
+activities and activity habits of rides.
+
+### 3.1 Table of Total Number of Rides
+
 ``` r
 ride_counts = citibike_df |>
   group_by(year, month, member_casual) |>
@@ -583,3 +609,75 @@ kable(ride_counts_wide,
 | 2024 | July    |  10894 |  36262 |
 
 Table 2. Total Number of Rides of Casual Riders and Citi Bike Members
+
+Between 2020 and 2024, there is a significant increase in the number of
+rides for both casual rides and members. Additionally, there is a clear
+seasonality in the data, with more rides occurring in July compared to
+January in both years, particularly for casual rides.
+
+### 3.2 Table of Top 5 Popular Start Stations
+
+``` r
+top_stations = july_2024 |>
+  group_by(start_station_name) |>
+  summarise(total_rides = n()) |>
+  arrange(desc(total_rides)) |>
+  slice_head(n = 5)
+
+kable(top_stations, 
+      col.names = c("Start Station Name", "Total Rides"),
+      caption = "Table 3. Top 5 Popular Start Stations")
+```
+
+| Start Station Name       | Total Rides |
+|:-------------------------|------------:|
+| Pier 61 at Chelsea Piers |         163 |
+| University Pl & E 14 St  |         155 |
+| W 21 St & 6 Ave          |         152 |
+| West St & Chambers St    |         150 |
+| W 31 St & 7 Ave          |         146 |
+
+Table 3. Top 5 Popular Start Stations
+
+### 3.3 Plot of
+
+``` r
+#median
+ride_duration_median = citibike_df |>
+  group_by(year, month, weekdays) |>
+  summarise(median_duration = median(duration), .groups = 'drop')
+
+#the effects on median ride duration
+ggplot(ride_duration_median, aes(x = weekdays, y = median_duration, color = month)) +
+  geom_line(aes(group = month)) + 
+geom_point(aes(group = month), shape = 1, size = 3) +
+  facet_wrap(~ year) +
+  scale_color_manual(
+    values = c("January" = "skyblue", "July" = "orange"),
+    labels = c("January","July")
+  ) +
+  labs(
+    x = "Day of A Week",
+    y = "Median Ride Duration (Minutes)",
+    color = "Month"
+  ) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/median-1.png"
+alt="Figure 8. Median Ride Duration by Day of Week, Month, and Year" />
+<figcaption aria-hidden="true">Figure 8. Median Ride Duration by Day of
+Week, Month, and Year</figcaption>
+</figure>
+
+- The median length of rides in both January and July in 2024 is
+  significantly lower than the same period in 2020.
+
+- Typically weekdays have shorter ride duration, while weekends have
+  longer ride lengths because recreational riding may be more frequent.
+
+- Summer months (July) have longer rides, probably because the weather
+  is more suitable for outdoor activities, while winter months (January)
+  have shorter rides in comparison.
