--- a/p8105_hw3_WL3011.Rmd
+++ b/p8105_hw3_WL3011.Rmd
@@ -14,6 +14,7 @@ library(knitr)
 library(ggplot2)
 library(patchwork) 
 library(ggridges)
+library(scales)
 ```
 
 ## Problem 1
@@ -138,33 +139,15 @@ p_july = ggplot(avg_tmax_df, aes(x = year)) +
 p_july / p_january
 ```
 
-Figure 2 above shows a few patterns and observations stand out:
+Figure 2 above shows patterns as follows:
 
-*   Seasonal Variation:
-
-July consistently shows much higher average maximum temperatures (20 to 30°C) compared to January (-10 to 10°C). This reflects the typical seasonal difference between winter and summer.
-
-*   Parallel Trends Across Stations
-
-The year-to-year January and July maximum temperatures recorded at each weather station maintain a parallel pattern, i.e., they have a similar trend of change.
-
-*   Outliers:
-
-There are a few sharp drops (e.g., July showing one or two sudden drops below 20°C and January dipping below -10°C). These might indicate unusual weather events.
-
-*   Noise in January Data:
-
-Compared to the July data, the January data fluctuated more between 1981 and 2010 and had discrete extremes at some stations in 2004. This could indicate that January weather is more unpredictable, perhaps due to snow, storms, or varying cold fronts.
-
-
-
-
-
+*   There is a typical seasonal difference between winter and summer. July consistently shows much higher average maximum temperatures (20 to 30°C) compared to January (-10 to 10°C). 
+*   The year-to-year January and July maximum temperatures recorded at each weather station maintain a parallel pattern, i.e., they have a similar trend of change.
+*   Outliers: There are a few sharp drops. For example, July showing one or two sudden drops below 20°C and January dipping below -10°C. Besides, compared to the July data, the January data fluctuated more between 1981 and 2010 and had discrete extremes at some stations in 2004.
 
 ### 1.3 Tmax vs Tmin
 
-
-Make a two-panel plot showing  (note that a scatterplot may not be the best option); 
+Make a two-panel plot (no scatter plot).
 
 ```{r MAXMIN, message = FALSE, warning=FALSE, fig.cap="Figure 3. Density Plot of Maximum and Minimum Temperature"}
 
@@ -189,7 +172,7 @@ p_tmin + p_tmax
 
 ### 1.4 Distribution of Snowfall
 
-(ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+Make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
 
 ```{r message = FALSE, warning=FALSE, fig.width = 7, fig.height = 7, fig.cap="Figure 4. Annual Snowfall Values Distribution"}
 library(ggridges)
@@ -211,7 +194,6 @@ p2 = ny_noaa |>
 
 print(p2)
 ```
-
 
 ## II. Problem 2
 
@@ -278,10 +260,14 @@ num_sex_df =
       2 ~ "High_school_equivalent",
       3  ~ "More_than_high_school"
     )
-  )
+  ) |>
+pivot_wider(
+  names_from = sex,
+values_from = number
+)
 
 kable(num_sex_df, 
-      col.names = c("Gender", "Education", "Number"),
+      col.names = c("Education", "Male", "Female"),
       caption = "Table 1. Number of Men and Women by Education Category")
 ```
 
@@ -313,24 +299,17 @@ ggplot(covar_df, aes(x = age, fill = gender)) +
 **Observations by Education Category:**
 
 1.  Less than High School:
-
 *   A prominent peak around age 70 is visible for both genders.
-
 *   Women generally have higher densities after age 50, suggesting a larger proportion of older women in this education level.
 
 2.  High School Equivalent:
-
 *   Both men and women show two peaks: one around age 30 and another around age 60.
-
 *   There seems to be a higher concentration of older individuals (60+) compared to younger ones for female group.
 
 
 3.  More than High School:
-
 *   There is a strong peak around age 30 for both men and women.
-
 *   After age 50, the densities decrease significantly, meaning fewer older individuals have education levels above high school.
-
 *   The distributions for men and women are very similar, though women show a slight advantage in the younger age group.
 
 **Gender Differences:**
@@ -342,7 +321,6 @@ especially in the "High School Equivalent" category, male and female participant
 Create a scatter plot with a smooth trend line meeting the following needs:
 
 *   Create a `total_activity` variable for each participant;
-
 *   Plot the `total_activity` against `age`, by `sex` and `education`.
 
 ```{r total_activity, message = FALSE, warning=FALSE, fig.width = 7, fig.height = 5, fig.cap="Figure 6. Total Activity vs Age by Gender and Education Level" }
@@ -378,17 +356,9 @@ print(activity_plot)
 
 Overall, across all education levels, total activity tends to decline with increasing age. Gender differences are consistent, with men generally being less active than women.
 
-1.  Less than High School:
-
-*  A clear decline in activity as age increases. Both men and women show a sharp drop after the age of 60.
-
-2.  High School Equivalent:
-
-*   Activity declines gradually, but there is an increase around age 70 before dropping again.
-
-3.  More than High School:
-
-Activity levels are lower for both men and women, especially in early adulthood. There is less variability, with a smoother decline across all ages.
+*   For Less than High School category, a clear decline in activity as age increases. Both men and women show a sharp drop after the age of 60.
+*   For  High School Equivalent category, Activity declines gradually, but there is an increase around age 70 before dropping again.
+*  For More than High School category, activity levels are lower for both men and women, especially in early adulthood. There is less variability, with a smoother decline across all ages.
 
 ### 2.4 24-Hour Activity Time Courses
 
@@ -429,12 +399,9 @@ ggplot(summary_df, aes(x = minute /60, y = mean_min, color = gender)) +
 ```
 
 *   In all educational levels, it is clear that activity levels increase in the morning, peak in the afternoon (with a a little drop in between), and gradually decline in the evening.
-
 *   Across all three educational categories, females tend to have slightly higher activity levels during the peak hours compared to males. 
 
-
 ## III. Problem 3
-
 Import, clean, combine and tidy these data.
 
 ```{r message = FALSE, warning=FALSE}
@@ -466,19 +433,13 @@ citibike_df = bind_rows(jan_2020, july_2020, jan_2024, july_2024) |>
 
 There are `r nrow(citibike_df)` rides across all four months. Every month's file consists of the following `r ncol(jan_2020) - 2` columns:
 
-`ride_id`: Each rides' ID;
-
-`rideable_type`: The type of bike used, such as "classic_bike";
-
-`weekdays`: The day of the week when the ride occurred;
-
-`duration`: The duration of the ride, in minutes;
-
-`start_station_name`: The name of the station where the ride started;
-
-`end_station_name`: The name of the station where the ride ended;
-
-`member_casual`: Whether the rider is a member or a casual user.
+*   `ride_id`: Each rides' ID;
+*   `rideable_type`: The type of bike used, such as "classic_bike";
+*   `weekdays`: The day of the week when the ride occurred;
+*   `duration`: The duration of the ride, in minutes;
+*   `start_station_name`: The name of the station where the ride started;
+*   `end_station_name`: The name of the station where the ride ended;
+*   `member_casual`: Whether the rider is a member or a casual user.
 
 A small number of entries have missing data in the `start_station_name` and `end_station_name` columns. But these observations are retained for the time being, as they are still valid for counting the number of activities and activity habits of rides.
 
@@ -516,7 +477,7 @@ kable(top_stations,
       caption = "Table 3. Top 5 Popular Start Stations")
 ```
 
-### 3.3 Plot of
+### 3.3 Plot of Median Ride Duration
 
 ```{r median, message = FALSE, warning=FALSE,  fig.width = 8, fig.height = 5, fig.cap="Figure 8. Median Ride Duration by Day of Week, Month, and Year"}
 
@@ -544,8 +505,33 @@ geom_point(aes(group = month), shape = 1, size = 3) +
 ```
 
 *   The median length of rides in both January and July in 2024 is significantly lower than the same period in 2020.
-
 *   Typically weekdays have shorter ride duration, while weekends have longer ride lengths because recreational riding may be more frequent.
-
 *   Summer months (July) have longer rides, probably because the weather is more suitable for outdoor activities, while winter months (January) have shorter rides in comparison.
+
+### 3.4 Plot of Impact on Ride Duration
+
+```{r duration2024, message = FALSE, warning=FALSE,  fig.width = 10, fig.height = 5, fig.cap="Figure 9. Impact of Month, Membership Status, and Bike Type on Ride Duration (2024)"}
+
+data_2024 = citibike_df |>
+  filter(year == 2024)
+
+ggplot(data_2024, aes(x = member_casual, y = duration, fill = rideable_type)) +
+  geom_violin(alpha = 0.7, position = position_dodge(width = 0.8), trim = FALSE) +  
+  facet_wrap(~ month) +
+  labs(
+    x = "Membership",
+    y = "Ride Duration (Minutes)",
+    fill = "Bike Type"
+  ) +
+  scale_fill_manual(
+    values = c("electric_bike" = "skyblue", "classic_bike" = "orange")
+  ) +
+  scale_y_continuous(trans = pseudo_log_trans(base = 10), breaks = c(0, 5, 10, 25, 50, 100, 150, 200)) +  
+  theme_minimal() 
+
+```
+
+*   Casual riders tend to have a more varied distribution of ride durations compared to members. In January, the distribution of ride durations for both bike types is relatively concentrated under 25 minutes, with a few longer rides extending up to 100+ minutes.  In July, the pattern is similar, though the distribution is slightly wider, with some riders using electric bikes for even longer rides.
+
+*   Members have a tighter distribution, indicating that most of their rides are shorter. Both classic and electric bikes tend to have ride durations predominantly under 25 minutes. 
 
